--- a/.gitignore
+++ b/.gitignore
@@ -9,11 +9,5 @@
 
 # Ignore all logfiles and tempfiles.
 /log/*
-/tmp/*
 !/log/.keep
-!/tmp/.keep
-
-/node_modules
-/yarn-error.log
-
-.byebug_history
+/tmp
