--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,8 @@ version: '2'
 services:
   db:
     image: postgres:9.6.3
+    ports:
+      - "5432"
   app:
     build: .
     command: bundle exec rails s -p 3000 -b '0.0.0.0'
@@ -9,6 +11,5 @@ services:
       - .:/coursecompare
     ports:
       - "3000:3000"
-    depends_on:
+    links:
       - db
-
